# taalika

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
rustdoc/: crates.js  search-index.js  settings.html  source-files.js
rustdoc/implementors/core/clone/: trait.Clone.js
rustdoc/implementors/core/default/: trait.Default.js
rustdoc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
rustdoc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
rustdoc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
rustdoc/implementors/std/error/: trait.Error.js
rustdoc/src/taalika/: column_spec.rs.html  error.rs.html  lib.rs.html  macros.rs.html  row.rs.html  table.rs.html  width_string.rs.html
rustdoc/taalika/: all.html  enum.Error.html  index.html  macro.row.html  macro.table.html  struct.Row.html  struct.Table.html  type.Result.html
rustdoc/taalika/error/: enum.Error.html  type.Result.html
rustdoc/taalika/row/: struct.Row.html
rustdoc/taalika/table/: struct.Table.html
src/: column_spec.rs  error.rs  lib.rs  macros.rs  row.rs  table.rs  width_string.rs
