[package]
name = "taalika"
version = "0.1.6"
authors = ["Rain <rain@sunshowers.io>", "Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Plain text tables, aligned automatically (fork of tabular)"
repository = "https://github.com/sunshowers-code/taalika"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["tables", "formatting", "alignment", "text", "cli"]
categories = ["value-formatting"]
edition = "2018"

[features]
default = ["unicode-width"]

[dependencies]
strip-ansi-escapes = "0.1.1"
unicode-width = { version = "0.1.5", optional = true }

[dev-dependencies]
colored = "2.0.0"
